--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     // https://mvnrepository.com/artifact/io.micrometer/micrometer-core
     implementation group: 'io.micrometer', name: 'micrometer-core', version: '1.12.5'
 
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
 
     implementation "org.springframework.cloud:spring-cloud-starter-consul-discovery"
 }
