--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -63,7 +63,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/io.micrometer/micrometer-core
 	implementation group: 'io.micrometer', name: 'micrometer-core', version: '1.12.5'
 
-
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 
 
 //	implementation 'org.apache.skywalking:apm-toolkit-logback-1.x:9.1.0'
